# cpp_boilerplate

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
boilerplate_library/: CMakeLists.txt
boilerplate_library/include/boilerplate_library/: boilerplate_library.hpp  format.hpp
boilerplate_library/src/boilerplate_library/: format.cpp
cmake/: FindFileSystem.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
docs/sphinx/: .buildinfo  genindex.html  help.html  index.html  license.html  objects.inv  search.html  searchindex.js
docs/sphinx/.doctrees/: environment.pickle  help.doctree  index.doctree  license.doctree
docs/sphinx/_sources/: help.rst.txt
examples/: CMakeLists.txt
examples/hello_example/: main.cpp
tests/: CMakeLists.txt
tests/unit/: library_test.cpp
